test/error/0011-extraelse.c

/*
PATTERN: else
*/

#if 1

#else

#else

#endif
